Added fix for Automapper implementation

--- a/WingTipToysWebApp/appsettings.json
+++ b/WingTipToysWebApp/appsettings.json
@@ -1,6 +1,6 @@
 {
     "ConnectionStrings": {
-        "WingTipToys": "Data Source=VAIO;Database=WingTipToys;Trusted_Connection=True;"
+        "WingTipToys": "Data Source=VAIO;Database=wingtiptoys;Trusted_Connection=True;"
 
     },
     "Logging": {
